# ucircfull

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ucircfull_apptainer.def
cmake/: ucircfullConfig.cmake.in
include/: align.hpp  circCall.hpp  circfullUtils.hpp  clust.hpp  degenerateBase.hpp  ucircfull.hpp  version.hpp
include/cccs/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  cccs.hpp
include/cccs/src/: c_module.rs  lib.rs
include/cdhit/: CMakeLists.txt  cdhit-common.h
include/minimap2/: CMakeLists.txt  Makefile
include/spoa/: CMakeLists.txt
src/: align.cpp  circCall.cpp  circFindBsj.cpp  circFindccs.cpp  circFullStruct.cpp  circFusion.cpp  circRecords.cpp  circfullUtils.cpp  clust.cpp  clustUMI.cpp  degenerateBase.cpp  extractUMI.cpp  filterCircCand.cpp  satcurve.cpp  ucircfull.cpp
